Feature: Updated to Version 2.0

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Práctica de Despliegue Automático</title>
 </head>
 <body>
-    <h1>Bienvenido a mi Sitio Web</h1>
-    <p>Esta es la **Versión 1.0**. El despliegue automático aún no se ha probado.</p>
+    <h1>¡Actualización de Contenido!</h1>
+    <p>Esta es la **Versión 2.0**. El despliegue automático **se ha activado** y ahora vamos a verificarlo.</p> 
 </body>
 </html>
